# wxFormBuilder

./: .clang-format  .clang-tidy  .drone.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitproperties  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json.example  Changelog.txt  README  README.md  README.txt  TODO.txt  appveyor.yml  create_build_files.bat  create_build_files.sh  create_build_files4.bat  create_build_files4.sh  create_build_files5.bat  create_build_files5.sh  create_build_files_mac.sh  license.txt  make_wxfb_archive.sh  meson.build  premake-linux  premake.lua  wxErlang_README.md  wxFormBuilder-unix.workspace  wxFormBuilder.workspace
plugins/: CMakeLists.txt  premake.lua
plugins/additional/: CMakeLists.txt  additional.cbp  additional.cpp  additional.vcproj  default.xpm  logo.xpm  premake.lua  smiley.xpm
plugins/additional/icons/: calendar.xpm  customcode.xpm  dataviewtree_ctrl.xpm  datepicker.xpm  filePicker.xpm  fontPicker.xpm  list_box.xpm  propgridman.xpm  propgridpage.xpm  ribbon_bar.xpm  ribbon_button.xpm  ribbon_buttonbar.xpm  ribbon_gallery.xpm  scintilla.xpm  search.xpm  spin_ctrl.xpm  treelistctrl.xpm  treelistctrlcolumn.xpm
plugins/additional/xml/: additional.cppcode  additional.luacode  additional.phpcode  additional.pythoncode  additional.xml  data.cppcode  data.luacode  data.phpcode  data.pythoncode  data.xml  ribbon.cppcode  ribbon.luacode  ribbon.phpcode  ribbon.pythoncode  ribbon.xml
plugins/common/: CMakeLists.txt  common-unix.cbp  common.cpp  common.vcproj  premake.lua
plugins/common/icons/: auitoolbar.xpm  button.xpm  checkbox.xpm  choice.xpm  gauge.xpm  infobar.xpm  list_ctrl.xpm  menu.xpm  radio_box.xpm  separator.xpm  statusbar.xpm  toolSeparator.xpm
plugins/common/xml/: common.cppcode  common.luacode  common.phpcode  common.pythoncode  common.xml  menutoolbar.cppcode  menutoolbar.luacode  menutoolbar.phpcode  menutoolbar.pythoncode  menutoolbar.xml
plugins/containers/: CMakeLists.txt  bookutils.h  containers.cpp  default.xpm  premake.lua
plugins/containers/icons/: choicebook.xpm  collpane.xpm  notebook.xpm  scrollwin.xpm  splitter_window.xpm
plugins/containers/xml/: containers.cppcode  containers.luacode  containers.phpcode  containers.pythoncode  containers.xml
plugins/forms/: CMakeLists.txt  forms.cpp  premake.lua
plugins/forms/icons/: doc_mdi_parent_frame.xpm  frame.xpm  toolbar.xpm  wizard.xpm  wizpage.xpm
plugins/forms/xml/: forms.cppcode  forms.luacode  forms.phpcode  forms.pythoncode  forms.xml
plugins/layout/: CMakeLists.txt  layout-unix.cbp  layout.cpp  premake.lua
plugins/layout/icons/: flex_grid_sizer.xpm  grid_bag_sizer.xpm  grid_sizer.xpm  sizer.xpm  staticbox_sizer.xpm  stddialogbuttonsizer.xpm
plugins/layout/xml/: layout.cppcode  layout.luacode  layout.phpcode  layout.pythoncode  layout.xml
plugins/wxAdditions/: premake.lua  wxAdditions_mini.cpp
sdk/: CMakeLists.txt  CMakeLists.txt.example  README.TXT  README.md  premake-linux  premake.lua
sdk/common/: xmlutils.cpp  xmlutils.h
sdk/plugin_interface/: CMakeLists.txt  Plugin Interface.cbp  component.h  default.xpm  fontcontainer.h  plugin.cpp  plugin.h  plugin_interface-unix.cbp  premake.lua  xrcconv.cpp  xrcconv.h
sdk/plugin_interface/forms/: wizard.cpp  wizard.fbp  wizard.h  wizardbase.cpp  wizardbase.h
sdk/premake/scripts/: wxpresets.lua
sdk/premake/src/: arg.c  cb.c  cb.h  cb_cpp.c  clean.c  codelite.c  codelite.h  gnu.c  gnu.h  gnu_cpp.c  gnu_cs.c  gnu_helpers.c  io.c  io.h  monodev.c  monodev.h  monodev_cs.c  os.h  path.c  path.h  platform.h  platform_posix.c  platform_windows.c  premake.c  premake.h  premake.lua  project.c  project.h  script.c  script.h  sharpdev.c  sharpdev.h  sharpdev_cs.c  util.c  util.h  vs.c  vs2002.c  vs2002.h  vs2002_cs.c  vs2005.c  (+7 more)
src/: CMakeLists.txt  Info.plist.in  Splash.pdn  maingui.cpp  maingui.h  pch.h  premake.lua  splashscreen.cpp  splashscreen.h  wxFormBuilder-unix.cbp  wxFormBuilder.cbp  wxFormBuilder.icns  wxFormBuilder.rc
src/boost/: assert.hpp  checked_delete.hpp  readme.txt  shared_ptr.hpp  throw_exception.hpp  weak_ptr.hpp
src/boost/detail/: allocator.hpp  atomic_count.hpp  binary_search.hpp  call_traits.hpp  catch_exceptions.hpp  in_place_factory.hpp  iterator.hpp  lightweight_mutex.hpp  lwm_irix.hpp  lwm_nop.hpp  lwm_win32_cs.hpp  named_template_params.hpp  numeric_traits.hpp  quick_allocator.hpp  reference_content.hpp  shared_count.hpp  typed_in_place_factory.hpp
src/codegen/: codeParser.h  codegen.cpp  codegen.h  codeparser.cpp  codeparser.h  codewriter.cpp  codewriter.h  cppcg.cpp  cppcg.h  erlangcg.cpp  erlangcg.h  luacg.cpp  luacg.h  phpcg.cpp  phpcg.h  pythoncg.cpp  pythoncg.h  xrccg.cpp  xrccg.h
src/controls/: README.txt  premake.lua  wxWindowsLicence.txt
src/dbg_stack_trace/: stack.cpp  stack.hpp
src/icons/: balign.xpm  chalign.xpm  copy.xpm  cruz_match.xpm  expand.xpm  lalign.xpm  new.xpm  ot_menubar.xpm  ot_sizer.xpm  ot_widget.xpm  save.xpm  save22.xpm  stretch.xpm  talign.xpm  wxwin16x16.xpm
src/md5/: README  md5.cc  md5.hh
src/model/: database.cpp  database.h  objectbase.cpp  objectbase.h  objectinterface.h  types.cpp  types.h  xrcfilter.cpp  xrcfilter.h
src/projects/example/: example2.fbp
src/rad/: about.cpp  about.h  appdata.cpp  appdata.h  auitabart.cpp  auitabart.h  bitmaps.cpp  bitmaps.h  cmdproc.cpp  cmdproc.h  customkeys.cpp  customkeys.h  dialogfindcomponent.cpp  dialogfindcomponent.h  genericpanel.cpp  genericpanel.h  mainframe.cpp  mainframe.h  menueditor.cpp  menueditor.h  palette.cpp  palette.h  revision.cpp.in  revision.h  title.cpp  title.h  unknown.h  version.cpp.in  version.h  wxfbevent.cpp  wxfbevent.h  wxfbmanager.cpp  wxfbmanager.h
src/utils/: annoyingdialog.cpp  annoyingdialog.h  debug.cpp  debug.h  encodingutils.cpp  encodingutils.h  filetocarray.cpp  filetocarray.h  m_wxfb.cpp  notebookchooser.h  scopeexit.h  stringutils.cpp  stringutils.h  typeconv.cpp  typeconv.h  wxfbdefs.h  wxfbexception.h  wxfbipc.cpp  wxfbipc.h  wxlogstring.h  xmlutils.cpp  xmlutils.h
(+702 files in other folders)
